# livemix

./: .gitignore  BUILDING.md  Cargo.toml  Makefile  README.md
crates/client/: Cargo.toml
crates/client/src/: activation.rs  buffer.rs  client.rs  client_node.rs  events.rs  ffi.rs  id.rs  lib.rs  memory.rs  parameters.rs  ports.rs  ptr.rs  state.rs  stats.rs  stream.rs  utils.rs
crates/pod/: Cargo.toml  README.md
crates/pod-macros/: Cargo.toml
crates/pod-macros/src/: attrs.rs  lib.rs  pod.rs  toks.rs
crates/pod-macros/tests/: derives.rs  object.rs
crates/pod/src/: __derives.rs  array.rs  array_buf.rs  as_reader.rs  as_slice.rs  bitmap.rs  bstr.rs  buf.rs  builder.rs  choice.rs  control.rs  de.rs  decode_from.rs  dynamic_buf.rs  embeddable.rs  en.rs  encode_into.rs  error.rs  fd.rs  fraction.rs  id.rs  into_raw.rs  lib.rs  macros.rs  pod.rs  pod_kind.rs  pod_sink.rs  pod_stream.rs  pointer.rs  property.rs  read.rs  read_from.rs  readable.rs  reader.rs  rectangle.rs  sized_readable.rs  sized_writable.rs  slice.rs  split_reader.rs  tests.rs  (+10 more)
crates/pod/src/buf/: array_buf.rs  array_vec.rs  dynamic_buf.rs  slice.rs  slice_buf.rs  writer_slice.rs
crates/pod/src/builder/: array_builder.rs  builder.rs  choice_builder.rs  object_builder.rs  object_encoder.rs  pod_kind.rs  sequence_builder.rs  struct_builder.rs
crates/pod/src/de/: array.rs  array_decoder.rs  choice.rs  choice_decoder.rs  decode.rs  decode_array.rs  decode_struct.rs  decode_unsized.rs  decoder.rs  object.rs  object_decoder.rs  sequence.rs  sequence_decoder.rs  sized_readable.rs  struct_.rs  struct_decoder.rs
crates/pod/src/en/: array_encoder.rs  choice_encoder.rs  encode.rs  encode_array.rs  encode_into.rs  encode_struct.rs  encode_unsized.rs  encoder.rs  object_encoder.rs  sequence_encoder.rs  sized_writable.rs  struct_encoder.rs  unsized_writable.rs
crates/pod/src/read/: array.rs  choice.rs  object.rs  sequence.rs  struct_.rs
crates/pod/src/tests/: choice.rs  object.rs  struct_.rs
crates/protocol/: Cargo.toml
crates/protocol/examples/: client.rs
crates/protocol/src/: buf.rs  connection.rs  consts.rs  dynamic_buf.rs  error.rs  event_fd.rs  events.rs  ffi.rs  flags.rs  id.rs  ids.rs  lib.rs  macros.rs  main_loop.rs  object.rs  op.rs  param.rs  poll.rs  prop.rs  properties.rs  timer_fd.rs  types.rs
crates/protocol/src/buf/: array_vec.rs  recv_buf.rs  send_buf.rs  tests.rs
crates/protocol/src/poll/: linux.rs
examples/: client.rs  export.c  livemix_io.rs  node.c  private.h  record_port.rs  stream.c  test.c
old/: Cargo.toml
old/examples/: stream.c  stream.h
old/src/: mixer.rs  spa.rs
src/: lib.rs  macros.rs  main.rs  mixer.rs  pw.rs  web.rs
