[package]
name = "livemix"
version = "0.1.0"
edition = "2024"

[dependencies]
pw-sys = { package = "pipewire-sys", version = "0.8.0" }
spa-sys = { package = "libspa-sys", version = "0.8.0" }
libspa = "0.8.0"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[workspace]
members = [
    "crates/*"
]
