[package]
name = "pod-macros"
version = "0.0.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = { version = "1.0.95", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.104", default-features = false, features = ["parsing", "proc-macro", "printing", "derive", "clone-impls"] }

[dev-dependencies]
pod = { path = "../pod" }
