[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc", "pod/std", "libc/std"]
alloc = ["pod/alloc"]

[dependencies]
bittle = "0.6.0"
libc = { version = "0.2.174", default-features = false }
pod = { path = "../pod", default-features = false }

[dev-dependencies]
anyhow = "1.0.98"
