[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc", "pod/std", "libc/std"]
alloc = ["pod/alloc"]

[dependencies]
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
pod = { path = "../pod", default-features = false}

bittle = "0.6.0"
libc = { version = "0.2.174", default-features = false }

[dev-dependencies]
pipewire-sys = "0.8.0"
libspa-sys = "0.8.0"
