[package]
name = "protocol"
version = "0.0.0"
edition = "2024"

[features]
default = ["std"]
std = ["alloc", "pod/std", "libc/std"]
alloc = ["pod/alloc"]
test-pipewire-sys = ["dep:libspa-sys", "dep:pipewire-sys"]

[dependencies]
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
pod = { path = "../pod", default-features = false}

bittle = "0.6.0"
libc = { version = "0.2.174", default-features = false }
libspa-sys = { version = "0.8.0", optional = true }
pipewire-sys = { version = "0.8.0", optional = true }
